--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ hyperlink==21.0.0
 idna==3.7
 incremental==22.10.0
 oauthlib==3.2.2
+pillow==10.4.0
 psycopg==3.1.19
 pyasn1==0.6.0
 pyasn1-modules==0.4.0
